--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -89,16 +89,17 @@
 }
 
 .ace_editor {
-  max-height: calc(
+  /*max-height: calc(
     var(--max-editor-line-count) *
       (
         calc(var(--global-font-size, 1.5rem) * var(--font-size-multiplier)) *
           1.47
       )
   ) !important;
+  */
   font-size: calc(
     var(--global-font-size, 1.5rem) * var(--font-size-multiplier)
   ) !important;
 
-  height: auto !important;
+  //height: auto !important;
 }
