improve(CSS): Print without table buttons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -112,6 +112,8 @@
     .lia-support-menu--open,
     .lia-slide__footer,
     .lia-quiz__control,
+    .lia-plot__switch,
+    .lia-table__sort,
     #lia-toolbar-nav {
         display: none !important;
         width: 0 !important;
