improve(Style): Unordered lists with GitHub flavor
Previously used chevron < in unordered list was replaced by the circles
and squares, which reflect the github flavored Markdown:

  - dot
    - circle
      - square

--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -380,172 +380,187 @@ $icon-lineplot: "\EA21";
   content: $icon-lineplot
 }
 
-$icon-login: "\EA22";
+$icon-list-1: "\EA22";
+.icon-list-1:before {
+  content: $icon-list-1
+}
+
+$icon-list-2: "\EA23";
+.icon-list-2:before {
+  content: $icon-list-2
+}
+
+$icon-list-3: "\EA24";
+.icon-list-3:before {
+  content: $icon-list-3
+}
+
+$icon-login: "\EA25";
 .icon-login:before {
   content: $icon-login
 }
 
-$icon-mail: "\EA23";
+$icon-mail: "\EA26";
 .icon-mail:before {
   content: $icon-mail
 }
 
-$icon-map: "\EA24";
+$icon-map: "\EA27";
 .icon-map:before {
   content: $icon-map
 }
 
-$icon-matrix: "\EA25";
+$icon-matrix: "\EA28";
 .icon-matrix:before {
   content: $icon-matrix
 }
 
-$icon-minus: "\EA26";
+$icon-minus: "\EA29";
 .icon-minus:before {
   content: $icon-minus
 }
 
-$icon-more: "\EA27";
+$icon-more: "\EA2A";
 .icon-more:before {
   content: $icon-more
 }
 
-$icon-parallel: "\EA28";
+$icon-parallel: "\EA2B";
 .icon-parallel:before {
   content: $icon-parallel
 }
 
-$icon-pencil: "\EA29";
+$icon-pencil: "\EA2C";
 .icon-pencil:before {
   content: $icon-pencil
 }
 
-$icon-person: "\EA2A";
+$icon-person: "\EA2D";
 .icon-person:before {
   content: $icon-person
 }
 
-$icon-piechart: "\EA2B";
+$icon-piechart: "\EA2E";
 .icon-piechart:before {
   content: $icon-piechart
 }
 
-$icon-play-circle: "\EA2C";
+$icon-play-circle: "\EA2F";
 .icon-play-circle:before {
   content: $icon-play-circle
 }
 
-$icon-plus: "\EA2D";
+$icon-plus: "\EA30";
 .icon-plus:before {
   content: $icon-plus
 }
 
-$icon-presentation: "\EA2E";
+$icon-presentation: "\EA31";
 .icon-presentation:before {
   content: $icon-presentation
 }
 
-$icon-pubnub: "\EA2F";
+$icon-pubnub: "\EA32";
 .icon-pubnub:before {
   content: $icon-pubnub
 }
 
-$icon-radar: "\EA30";
+$icon-radar: "\EA33";
 .icon-radar:before {
   content: $icon-radar
 }
 
-$icon-refresh: "\EA31";
+$icon-refresh: "\EA34";
 .icon-refresh:before {
   content: $icon-refresh
 }
 
-$icon-resolve: "\EA32";
+$icon-resolve: "\EA35";
 .icon-resolve:before {
   content: $icon-resolve
 }
 
-$icon-sankey: "\EA33";
+$icon-sankey: "\EA36";
 .icon-sankey:before {
   content: $icon-sankey
 }
 
-$icon-scatterplot: "\EA34";
+$icon-scatterplot: "\EA37";
 .icon-scatterplot:before {
   content: $icon-scatterplot
 }
 
-$icon-search: "\EA35";
+$icon-search: "\EA38";
 .icon-search:before {
   content: $icon-search
 }
 
-$icon-settings: "\EA36";
+$icon-settings: "\EA39";
 .icon-settings:before {
   content: $icon-settings
 }
 
-$icon-slides: "\EA37";
+$icon-slides: "\EA3A";
 .icon-slides:before {
   content: $icon-slides
 }
 
-$icon-social: "\EA38";
+$icon-social: "\EA3B";
 .icon-social:before {
   content: $icon-social
 }
 
-$icon-sort-asc: "\EA39";
+$icon-sort-asc: "\EA3C";
 .icon-sort-asc:before {
   content: $icon-sort-asc
 }
 
-$icon-sort-desc: "\EA3A";
+$icon-sort-desc: "\EA3D";
 .icon-sort-desc:before {
   content: $icon-sort-desc
 }
 
-$icon-sound-off: "\EA3B";
+$icon-sound-off: "\EA3E";
 .icon-sound-off:before {
   content: $icon-sound-off
 }
 
-$icon-sound-on: "\EA3C";
+$icon-sound-on: "\EA3F";
 .icon-sound-on:before {
   content: $icon-sound-on
 }
 
-$icon-stop-circle: "\EA3D";
+$icon-stop-circle: "\EA40";
 .icon-stop-circle:before {
   content: $icon-stop-circle
 }
 
-$icon-sync: "\EA3E";
+$icon-sync: "\EA41";
 .icon-sync:before {
   content: $icon-sync
 }
 
-$icon-table: "\EA3F";
+$icon-table: "\EA42";
 .icon-table:before {
   content: $icon-table
 }
 
-$icon-trash: "\EA40";
+$icon-trash: "\EA43";
 .icon-trash:before {
   content: $icon-trash
 }
 
-$icon-warning: "\EA41";
+$icon-warning: "\EA44";
 .icon-warning:before {
   content: $icon-warning
 }
 
-$icon-zoom-out: "\EA42";
+$icon-zoom-out: "\EA45";
 .icon-zoom-out:before {
   content: $icon-zoom-out
 }
 
-$icon-zoom: "\EA43";
+$icon-zoom: "\EA46";
 .icon-zoom:before {
   content: $icon-zoom
 }
