fix: Scrollable Settings on KaiOS browser

--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -82,7 +82,7 @@
   &__nav {
     display: block;
     height: 100%;
-    overflow: hidden auto;
+    overflow: auto;
     padding: 1.7rem 2.1rem;
 
     &:focus {
