--- a/src/scss/05_components/_components.notes.scss
+++ b/src/scss/05_components/_components.notes.scss
@@ -5,7 +5,7 @@
   height: 100%;
   max-height: 14.2rem;
   max-width: 144rem;
-  overflow: hidden auto;
+  overflow: auto;
   position: relative;
   width: $notes-width-mobile;
 
