improve(CSS): Reduced audio setting size on small devices

--- a/src/scss/05_components/_components.responsive-voice.scss
+++ b/src/scss/05_components/_components.responsive-voice.scss
@@ -6,7 +6,7 @@ $responsive-voice-hight: 7rem;
   color: rgb(var(--color-highlight));
   display: flex;
   flex-direction: column;
-  min-height: 6rem;
+  //min-height: 6rem;
   justify-content: center;
   padding: 2rem;
   width: 100%;
