chore: Upgrade to parcel 2.6.0

--- a/src/scss/00_settings/_settings.global.scss
+++ b/src/scss/00_settings/_settings.global.scss
@@ -27,7 +27,7 @@ $global-media-direction: min; // min / max — default is min (mobile first)
 
 // Breakpoints
 $global-breakpoints: (
-  "default": "",
+  // "default": "",
   // 480px
   "xs": 30em,
   // 768px
