--- a/src/scss/05_components/_components.quiz.scss
+++ b/src/scss/05_components/_components.quiz.scss
@@ -44,10 +44,12 @@
     padding: 0;
   }
 
+  &__sync,
   &__hints,
   &__solution {
     grid-column-start: 1;
   }
+
 
   &__feedback {
     display: flex;
